welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value i
	var tab= new Array[Color](i)
                                  ^Array1:6: error: not enough arguments for method remplirTab: (taille: Int)Unit.
Unspecified value parameter taille.
	remplirTab() 
                  ^